[package]
name = "darktool"
version = "0.1.1"
authors = ["Abuzer Rafey <arafey@vyvygen.com>"]
description = "Darknet management tools"

[dependencies]
rand = "*"
[dependencies.clap]
version = "*"
default-features = true
features = [ "yaml", "unstable" ]

[lib]
name = "dtlib"
path = "src/lib/lib.rs"

[[bin]]
name = "dtbin"
path = "src/bin/main.rs"
